# S3Path

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
s3path/: __init__.py  errors.py  s3path.py
tests/: conftest.py  test_s3path.py
