[tool.poetry]
name = "s3path"
version = "0.1.0"
description = "A pathlib.Path-like integration for S3"
readme = "README.md"
authors = ["Niels Lemmens <1936122+bulv1ne@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.26"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.930"
pre-commit = "^2.16.0"
boto3-stubs = {extras = ["s3"], version = "^1.20.26"}
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
moto = {extras = ["s3"], version = "^2.3.0"}
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

