[tool.poetry]
name = "s3path"
version = "0.1.0"
description = "A pathlib.Path-like integration for S3"
readme = "README.md"
repository = "https://github.com/bulv1ne/S3Path/"
authors = ["Niels Lemmens <1936122+bulv1ne@users.noreply.github.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
boto3-stubs = {extras = ["s3"], version = "*"}
pytest = "*"
pytest-cov = "*"
moto = {extras = ["s3"], version = "*"}
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

